force-app/main/default/objects/Loyalty_Points__c/Loyalty_Points__c.object-meta.xml
<CustomObject>
    <label>Loyalty Points</label>
    <pluralLabel>Loyalty Points</pluralLabel>
    <nameField>
        <label>Loyalty Points Number</label>
        <displayFormat>LP-{0000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Hardware loyalty and rewards program tracking for points earned, redeemed, expired, and adjusted (MOD-13 Industry Extensions)</description>
</CustomObject>