force-app/main/default/objects/Loyalty_Points__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Loyalty Points</relationshipLabel>
    <relationshipName>Loyalty_Points</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>