force-app/main/default/objects/Loyalty_Points__c/fields/Balance_After__c.field-meta.xml
<CustomField>
    <fullName>Balance_After__c</fullName>
    <label>Balance After</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>