force-app/main/default/objects/Loyalty_Points__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Loyalty Points</relationshipLabel>
    <relationshipName>Loyalty_Points</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>