force-app/main/default/objects/Loyalty_Points__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <label>Invoice</label>
    <type>Lookup</type>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Loyalty Points</relationshipLabel>
    <relationshipName>Loyalty_Points</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>